examples/pos/name-based-implicits/callid.effekt
def here(?callId: Int): Int = callId

def main() = {
  println(here() == here())
}