examples/neg/parsing/rogue-splice.effekt
val rogue = ${}

def main() = println(rogue)
